--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="/images/box1.jpg" alt="Программирование" width="370">
+                    <img src="images/box1.jpg" alt="Программирование" width="370">
                 </li>
                 <li>
                     <img src="/images/box2.jpg" alt="Дизайн" width="370">
