--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="../images/box1.jpg" alt="Программирование" width="370">
+                    <img src="./images/box1.jpg" alt="Программирование" width="370">
                 </li>
                 <li>
-                    <img src="../images/box2.jpg" alt="Дизайн" width="370">
+                    <img src="./images/box2.jpg" alt="Дизайн" width="370">
                 </li>
                 <li>
-                    <img src="../images/box3.jpg" alt="Гармоничный подбор цветов" width="370">
+                    <img src="./images/box3.jpg" alt="Гармоничный подбор цветов" width="370">
                 </li>
             </ul>
         </section>
