--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="/"><span>Web</span>Studio</a>
+        <a href="/" lang="en">Web<span>Studio</span></a>
         <nav>
             <ul>
                 <li><a href="/">Студия</a></li>
@@ -16,17 +16,17 @@
                 <li><a href="#contacts">Контакты</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>  
     </header>
     
     <main>
-        <div>
-            <section>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
-            </section>
-        </div>
+         <section>
+             <h1>Эффективные решения для вашего бизнеса</h1>
+             <button type="button">Заказать услугу</button>
+        </section>
         
         <section>
             <h2>Особенности</h2>
@@ -70,29 +70,29 @@
                 <li>
                     <img src="./images/Igor.jpg" alt="Игорь Демьяненко" width="270">
                     <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <p lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/Olha.jpg" alt="Ольга Репина" width="270">
                     <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/Nikolai.jpg" alt="Николай Тарасов" width="270">
                     <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/Michael.jpg" alt="Михаил Ермаков" width="270">
                     <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
 
     <footer>
-        <a href="/"><span>Web</span>Studio</a>
+        <a href="/" lang="en">Web<span>Studio</span></a>
         <address id="contacts">
             <ul>
                 <li><a href="https://goo.gl/maps/YFTjMEW9eGdTmHT36" target="_blank" rel="noreferrer noopener nofollow">г. Киев, пр-т Леси Украинки, 26</a></li>
